<?xml version="1.0"?>
<package>
  <name>abb_irb14000_msgs</name>
  <version>0.0.4</version>
  <description>Custom ROS messages and services for ABB IRB14000 (YuMi)</description>

  <author email="yoshua.nava@kth.se">Yoshua Nava</author>
  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
