<?xml version="1.0"?>
<package>
  <name>abb_irb14000_bringup</name>
  <version>0.0.4</version>
  <description>Launch files for ABB IRB14000 (YuMi)</description>

  <author email="yoshua.nava@kth.se">Yoshua Nava</author>
  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
</package>
